LIVIJUKU-213 Hakemuslomakkeiden HTML-rakenne dynaamiseksi - Muutettu käsittelijän hakemusnäkymä käyttämään samaa lomakerakennetta, kuin hakijan hakemusnäkymä. - Lisätty readonly-toteutus, jonka avulla käsittelijä näkee hakulomakkeen vain luku tilaisena. - Tyylitelty readonly-tilan kentät vähemmän näkyviksi valkoisen taustan ja kehyksen värin avulla.

--- a/app/styles/jukubootstrap.css
+++ b/app/styles/jukubootstrap.css
@@ -3439,8 +3439,9 @@ output
 fieldset[disabled] .form-control
 {
     cursor: not-allowed;
-    background-color: #eee;
+    background-color: #fff;
     opacity: 1;
+    border-color: #fff;
 }
 
 textarea.form-control
