LIVIJUKU-213: - hakemuksen ko. kauden avuskohteet tulee backend-palvelusta - avustuskohteiden lajien / luokkien nimet backend-palvelusta, - avustuskohteiden järjestys backend-palvelusta.
Huom! direktiivit: jku-avustusluokka-panel ja jku-avustuskohde ovat samat kuin aikaisemminkin

--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -85,25 +85,9 @@
 
     <form name="hakemusForm">
 
-      <jku-avustusluokka-panel name="PSA:n mukaisen liikenteen hankinta">
-        <jku-avustuskohde kohde="akl.PSA[1]" name="Paikallisliikenne"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.PSA[2]" name="Integroitu palvelulinja, kaikille avointa"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.PSA.M" name="Muu PSA:n mukaisen liikenteen järjestäminen"></jku-avustuskohde>
-      </jku-avustusluokka-panel>
-
-      <jku-avustusluokka-panel name="Hintavelvoitteiden korvaaminen">
-        <jku-avustuskohde kohde="akl.HK.SL" name="Seutulippu"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.HK.KL" name="Kaupunkilippu / kuntalippu"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.HK.LL" name="Liityntälippu (esim. VR, pääkaupunkiseudun)"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.HK.TL" name="Työmatkalippu"></jku-avustuskohde>
-      </jku-avustusluokka-panel>
-
-      <jku-avustusluokka-panel name="Liikenteen suunnittelu- ja kehittämishankkeet">
-        <jku-avustuskohde kohde="akl.K.IM" name="Informaatio- ja maksujärjestelmien kehittäminen"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.K.MPK" name="Matkapalvelukeskuksen suunnittelu ja kehittäminen"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.K.MK" name="Matkakeskuksen suunnittelu ja kehittäminen"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.K.RT" name="Raitiotien suunnittelu" ng-show="userOrganisaatioLajitunnus=='KS1'"></jku-avustuskohde>
-        <jku-avustuskohde kohde="akl.K.M" name="Muu hanke, mikä?"></jku-avustuskohde>
+      <jku-avustusluokka-panel name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}" ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
+        <jku-avustuskohde kohde="avustuskohde" name="{{avustuskohdeLuokat[avustuskohde.avustuskohdeluokkatunnus].avustuskohdelajit[avustuskohde.avustuskohdelajitunnus].nimi}}"
+                          ng-repeat="avustuskohde in avustuskohdeluokka.avustuskohteet">
       </jku-avustusluokka-panel>
 
     </form>
