--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -13,14 +13,13 @@
               <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" target="_blank">Hakuohje
                 {{hakemuskausi.vuosi}}</a>
             </p>
-
             <p ng-show="hakemuskausi.uusi">
-              <label class="hakemuskausi-file-upload">
-                <input type="file" class="hidden-file-input" ng-show=" sallittu('modify-hakemuskausi')" ng-file-select
-                       ng-file-change="upload($files, hakemuskausi.vuosi)"
-                       multiple="false" ng-accept="'application/pdf'"/>
-                Lataa hakuohje
-              </label>
+              <!--<label class="hakemuskausi-file-upload">-->
+                <button class="hakemuskausi-file-upload" ng-show="sallittu('modify-hakemuskausi')" ngf-select
+                       ng-model="files" ngf-change="upload(files, hakemuskausi.vuosi)"
+                       ngf-multiple="false" ngf-accept="'application/pdf'">
+                Lataa hakuohje</button>
+             <!-- </label>-->
             </p>
 
             <p ng-show="hakemuskausi.tilatunnus=='A' && sallittu('modify-hakemuskausi')">
