--- a/app/views/yhteinen/jkuAvustusluokkaPanel.html
+++ b/app/views/yhteinen/jkuAvustusluokkaPanel.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-3">
         <div class="pull-right">
-          <h4 class="panel-title">{{(0) | currency:"&euro;"}}</h4>
+          <h4 class="panel-title">{{sumHaettavaAvustusOverLuokka(luokka) | currency:"&euro;"}}</h4>
         </div>
       </div>
     </div>
