--- a/app/views/hakija/hakemukset.html
+++ b/app/views/hakija/hakemukset.html
@@ -13,8 +13,7 @@
         <div class="row">
           <div class="col-md-3 text-center">
             <h1>{{hakemuskausi.vuosi}}</h1>
-            <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" class="btn btn-primary" target="_blank">Hakuohjeet
-              {{hakemuskausi.vuosi}}</a>
+            <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" target="_blank">Valtioneuvoston asetus</a>
             <br>
             <br>
           </div>
