--- a/app/styles/juku.css
+++ b/app/styles/juku.css
@@ -287,3 +287,20 @@ textarea {
 {
   display: none !important;
 }
+
+.avustuskohde .help-block {
+  display: none;
+}
+
+.avustuskohde .ng-invalid-omarahoitus-riittava.ng-dirty .help-block.ng-invalid-omarahoitus-riittava {
+  display: block;
+}
+
+.avustuskohde .ng-invalid-sallittu-arvo-haettavaavustus.ng-dirty .help-block.ng-invalid-sallittu-arvo-haettavaavustus {
+  display: block;
+}
+
+.avustuskohde .ng-invalid-sallittu-arvo-omarahoitus.ng-dirty .help-block.ng-invalid-sallittu-arvo-omarahoitus {
+  display: block;
+}
+
