--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -85,7 +85,7 @@
 
     <form name="hakemusForm">
 
-      <jku-avustusluokka-panel name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}" ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
+      <jku-avustusluokka-panel luokka="avustuskohdeluokka" name="{{avustuskohdeLuokat[avustuskohdeluokka.tunnus].nimi}}" ng-repeat="avustuskohdeluokka in avustuskohdeluokat">
         <jku-avustuskohde kohde="avustuskohde" name="{{avustuskohdeLuokat[avustuskohde.avustuskohdeluokkatunnus].avustuskohdelajit[avustuskohde.avustuskohdelajitunnus].nimi}}"
                           ng-repeat="avustuskohde in avustuskohdeluokka.avustuskohteet">
       </jku-avustusluokka-panel>
