LIVIJUKU-46 Otsikon korjaus: Hakemuksen käsittelijä hakee siirtomäärärahatiedot

--- a/app/views/kasittelija/suunnittelu.html
+++ b/app/views/kasittelija/suunnittelu.html
@@ -36,7 +36,7 @@
                ng-blur="paivitaKokonaismaararaha('maararaha')"/>
       </div>
       <div class="col-md-4">
-        <label>Siirto vuodelta {{vuosi-1}}</label>
+        <label>Siirtomääräraha vuodelta {{vuosi-1}}</label>
         <input type="text" min="-0.0001" ng-currency="" class="form-control"
                ng-focus="asetaVanhaArvo(ylijaama)"
                ng-model="ylijaama"
