--- a/app/views/kasittelija/hakemukset.html
+++ b/app/views/kasittelija/hakemukset.html
@@ -9,32 +9,56 @@
     <div class="row">
       <div class="col-md-3">
         <div ng-show="tyyppi=='AH0'">
-          <button ng-click="asetaTyyppi('AH0')" class="btn btn-primary">Avustushakemukset<span
+          <button ng-show="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('AH0')"
+                  class="btn btn-primary">Avustushakemukset<span
             class="badge badge-notify">{{kasiteltavatAvustushakemukset}}</span></button>
+          <button ng-hide="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('AH0')"
+                  class="btn btn-primary">Avustushakemukset
+          </button>
         </div>
         <div ng-hide="tyyppi=='AH0'">
-          <button ng-click="asetaTyyppi('AH0')" class="btn btn-default">Avustushakemukset<span
+          <button ng-show="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('AH0')"
+                  class="btn btn-default">Avustushakemukset<span
             class="badge badge-notify">{{kasiteltavatAvustushakemukset}}</span></button>
+          <button ng-hide="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('AH0')"
+                  class="btn btn-default">Avustushakemukset
+          </button>
         </div>
       </div>
       <div class="col-md-3">
         <div ng-show="tyyppi=='MH1'">
-          <button ng-click="asetaTyyppi('MH1')" class="btn btn-primary">1. maksatushakemukset<span
+          <button ng-show="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH1')"
+                  class="btn btn-primary">1. maksatushakemukset<span
             class="badge badge-notify">{{kasiteltavatMaksatus1hakemukset}}</span></button>
+          <button ng-hide="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH1')"
+                  class="btn btn-primary">1. maksatushakemukset
+          </button>
         </div>
         <div ng-hide="tyyppi=='MH1'">
-          <button ng-click="asetaTyyppi('MH1')" class="btn btn-default">1. maksatushakemukset<span
+          <button ng-show="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH1')"
+                  class="btn btn-default">1. maksatushakemukset<span
             class="badge badge-notify">{{kasiteltavatMaksatus1hakemukset}}</span></button>
+          <button ng-hide="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH1')"
+                  class="btn btn-default">1. maksatushakemukset
+          </button>
         </div>
       </div>
       <div class="col-md-3">
         <div ng-show="tyyppi=='MH2'">
-          <button ng-click="asetaTyyppi('MH2')" class="btn btn-primary">2. maksatushakemukset<span
+          <button ng-show="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH2')"
+                  class="btn btn-primary">2. maksatushakemukset<span
             class="badge badge-notify">{{kasiteltavatMaksatus2hakemukset}}</span></button>
+          <button ng-hide="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH2')"
+                  class="btn btn-primary">2. maksatushakemukset
+          </button>
         </div>
         <div ng-hide="tyyppi=='MH2'">
-          <button ng-click="asetaTyyppi('MH2')" class="btn btn-default">2. maksatushakemukset<span
+          <button ng-show="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH2')"
+                  class="btn btn-default">2. maksatushakemukset<span
             class="badge badge-notify">{{kasiteltavatMaksatus2hakemukset}}</span></button>
+          <button ng-hide="sallittu('kasittely-hakemus') || sallittu('hyvaksy-paatos')" ng-click="asetaTyyppi('MH2')"
+                  class="btn btn-default">2. maksatushakemukset
+          </button>
         </div>
       </div>
     </div>
