--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -50,10 +50,7 @@
         </div>
         <div class="col-md-3">
           <div class="pull-right">
-            <h4>{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus + hkslhaettavaavustus +
-              hkklhaettavaavustus + hkllhaettavaavustus +
-              hktlhaettavaavustus + kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
-              krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</h4>
+            <h4>{{sumHaettavaAvustus() | currency:"&euro;"}}</h4>
           </div>
         </div>
       </div>
